Add logo SVG and React component for branding
- Introduced a new SVG file for the logo located at public/logo.svg.
- Created a React component for the logo in src/components/logo.jsx.
- The logo features a green background with white accents and includes filters for shadow effects.
- Ensured the SVG is responsive and maintains its aspect ratio within the component.

--- a/index.html
+++ b/index.html
@@ -2,8 +2,20 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- Primary Meta Tags -->
+    <meta name="title" content="Reel Genix" />
+    <meta name="description" content="Reel Genix - A Reel Generator" />
+    <meta name="keywords" content="Reel Genix, Reel Generator, Video Generator" />
+    <meta name="author" content="Saad Hasan" />
+    <meta name="theme-color" content="#16C645" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-title" content="Reel Genix" />
+    <meta name="application-name" content="Reel Genix" />
+
     <title>Reel Genix</title>
     <link href="/dist/styles.css" rel="stylesheet" />
   </head>
